# DIAS

./: Cargo.toml  LICENSE.md
dias/: Cargo.toml
dias/src/: lib.rs
dias/src/io/read/: csv.rs  mod.rs  reader.rs
dias/src/transform/: cast_cols.rs  count_rows.rs  exclude_cols.rs  mod.rs  reverse_rows.rs  select_cols.rs  sort.rs  transformer.rs  transpose.rs
dias/src/transform/filter/: clause.rs  mod.rs
dias/src/transform/group_by/: group_by.rs
dias/src/transform/join/: join.rs
dias/src/transform/text/: parse.rs
